tests/NormalTests/paczka1/small_fuzzy/69702996.err
Error in line 1: 3gXa A512 37,0
Error in line 4: mysej7q S403 76,9
Error in line 8: mysej7q A740 55,8
